--- a/Halloapp/pl.lproj/Localizable.strings
+++ b/Halloapp/pl.lproj/Localizable.strings
@@ -373,7 +373,7 @@
 /* Title warning that a voice recording will be deleted */
 "composer.delete.recording.title" = "Usunąć nagranie głosowe?";
 
-/* Show the user that the title is tappable */
+/* Warning message shown to the user before discarding a voice post */
 "composer.deletevoicenote.message" = "Nagranie głosowe nie zostanie zapisanie, jeśli odrzucisz ten post.";
 
 /* Title for alert when closing the post composer with a voice note */
@@ -754,9 +754,6 @@
 /* Text shown to users trying to open the call screen. */
 "home.calls.notice.text" = "W tej chwili nie masz aktywnego połączenia.";
 
-/* Title of call screen alert. */
-"home.calls.notice.title" = "Brak aktywnych połączeń";
-
 /* Title for exit button that closes the app */
 "home.update.notice.button.exit" = "Zamknij";
 
@@ -891,9 +888,6 @@
 
 /* Message action. Verb. */
 "message.delete" = "Usuń";
-
-/* Message action. Verb. */
-"message.info" = "Informacje";
 
 /* Message action. Verb. */
 "message.reply" = "Odpowiedz";
@@ -1229,9 +1223,6 @@
 /* fallback text in notification when user is added to a new group */
 "server.new.group" = "Dodano Cię do nowej grupy";
 
-/* fallback text in notification for a new group chat message */
-"server.new.group.message" = "Nowa wiadomość grupowa";
-
 /* fallback text in notification when an invitee joins */
 "server.new.inviter" = "Użytkownik %@ właśnie zaakceptował Twoje zaproszenie do HalloApp 🎉";
 
@@ -1375,9 +1366,6 @@
 
 /* One of the items in context menu presented upon long press on web link. */
 "textlabel.context.menu.share" = "Udostępnij...";
-
-/* Link to expand truncated text. */
-"textlabel.more" = "...więcej";
 
 /* Default preview text shown for a symmetric contact in the chats list screen that the user haven't messaged yet */
 "thread.list.preview.already.user.default" = "%@ jest na HalloApp";
