--- a/Halloapp/cs.lproj/Localizable.strings
+++ b/Halloapp/cs.lproj/Localizable.strings
@@ -1301,7 +1301,7 @@
 /* Navigation bar title informing the user that this page lets them export their user data. */
 "settings.account.export.navbar" = "Export dat";
 
-/* Label for when the date at which the user data is not determined. */
+/* Label for when the date at which the exported user data will be available is not determined. */
 "settings.account.export.not.found" = "Datum připravenosti nebylo možné stanovit.";
 
 /* Button to open the user data exported from HalloApp. */
