--- a/Halloapp/pt.lproj/Localizable.strings
+++ b/Halloapp/pt.lproj/Localizable.strings
@@ -1337,7 +1337,7 @@
 /* Navigation bar title informing the user that this page lets them export their user data. */
 "settings.account.export.navbar" = "Exportar dados";
 
-/* Label for when the date at which the user data is not determined. */
+/* Label for when the date at which the exported user data will be available is not determined. */
 "settings.account.export.not.found" = "Não foi possível estabelecer a data de conclusão.";
 
 /* Button to open the user data exported from HalloApp. */
