--- a/Share Extension/de.lproj/Localizable.strings
+++ b/Share Extension/de.lproj/Localizable.strings
@@ -130,6 +130,10 @@
 /* Share on the home feed label */
 "share.destination.home" = "Home";
 
+/* Alert title when a direct to contact sharing is missing
+   Alert title when a direct to group sharing is missing */
+"share.destination.missing.group" = "Gruppenfreigabe fehlt: %@";
+
 /* Show more groups in the share group selection */
 "share.destination.more" = "Mehr anzeigen...";
 
